add background gif

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background: url('https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExcm5ncjZobGx3cGZ3ZTJjZjFkMWdiMnAzbXd0aDcwY3h2c3p3eHUzaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/IgOEWPOgK6uVa/giphy.gif') no-repeat center center fixed; /* Random photo from Giphy */
+        background-size: cover; /* Resize the background to cover the whole screen */
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
